--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -115,6 +115,24 @@ jobs:
           cache-path: .tox
           cache-key: doubletest-${{ github.ref_name }}
 
+  test_optimized_mode:
+    # tox itself doesn't support optimized mode so we'll run pytest directly
+    # see https://github.com/tox-dev/tox/issues/3006
+    needs: [initial_checks]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Setup Python
+        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
+        with:
+          python-version: 3.x
+      - name: Build
+        run: python -m pip install -e '.[test]'
+      - name: Run pytest
+        run: pytest --color=yes -ra -n4
+        env:
+          PYTHONOPTIMIZE: 2
+
   allowed_failures:
     needs: [initial_checks]
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@9f1fedda61294df4c004c05519a3fbf3b8e1f32f  # v2.3.1
