TST: move oldestdeps env resolution from lowest-direct to lowest

--- a/tox.ini
+++ b/tox.ini
@@ -128,8 +128,10 @@ pip_pre =
 
 uv_resolution =
     # The oldestdeps factor is intended to be used to install
-    # the oldest versions of all dependencies
-    oldestdeps: lowest-direct
+    # the oldest versions of all dependencies.
+    # Let uv handle this for us by requesting all requirements should be
+    # resolved to their oldest compatible versions (including transitive dependencies)
+    oldestdeps: lowest
 
 # This lets developers use tox to build docs and ignores warnings.
 # This is not used in CI; For that, we have RTD PR builder.
