--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,11 @@ setenv =
     mpldev: UV_INDEX = https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
     devdeps, mpldev: UV_INDEX_STRATEGY = unsafe-best-match # match pip's behavior
     fitsio: ASTROPY_ALWAYS_TEST_FITSIO = true
+    # on oldestdeps, we let warnings be warnings (-Wdefault) instead of treated-as-errors,
+    # so we don't need to deal with filtering anything triggered from dependencies
+    # Other options replicate the static configuration from pyproject.toml, since they
+    # would otherwise be shaddowed by the env variable.
+    oldestdeps: PYTEST_ADDOPTS = -Wdefault -ra --doctest-rst --strict-config --strict-markers
 
 # Run the tests in a temporary directory to make sure that we don't import
 # astropy from the source tree
