--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -47,6 +47,24 @@ jobs:
             core.info(`PR opened correctly against ${allowed_basebranch}`);
           }
 
+  lowest-tree-check:
+    name: Check environment lowest resolution against reference
+    needs: [initial_checks]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3  # v6.0.0
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+      - uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c  # v6.0.0
+        name: Install Python
+        with:
+          python-version: "3.14"
+      - run: pipx run scripts/check-lowest-resolved-tree.py
+
+      - if: failure()
+        run: pipx run scripts/check-lowest-resolved-tree.py --markdown --quiet >> "$GITHUB_STEP_SUMMARY" || true
+
   tests:
     needs: [initial_checks]
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@9f1fedda61294df4c004c05519a3fbf3b8e1f32f  # v2.3.1
@@ -116,7 +134,9 @@ jobs:
           cache-key: doubletest-${{ github.ref_name }}
 
   allowed_failures:
-    needs: [initial_checks]
+    needs:
+      - initial_checks
+      - lowest-tree-check
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@9f1fedda61294df4c004c05519a3fbf3b8e1f32f  # v2.3.1
     with:
       setenv: |
@@ -135,7 +155,9 @@ jobs:
           posargs: --remote-data=any --verbose
 
   stub_tests:
-    needs: [initial_checks]
+    needs:
+      - initial_checks
+      - lowest-tree-check
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@9f1fedda61294df4c004c05519a3fbf3b8e1f32f  # v2.3.1
     with:
       setenv: |
@@ -149,7 +171,9 @@ jobs:
           cache-key: stub_tests-${{ github.ref_name }}
 
   test_wheel_building:
-    needs: [initial_checks]
+    needs:
+      - initial_checks
+      - lowest-tree-check
     # This ensures that a couple of wheel targets work fine in pull requests and pushes
     permissions:
       contents: none
@@ -176,7 +200,9 @@ jobs:
             - windows-latest
     runs-on: ${{ matrix.os }}
     name: Python 3.11 (build only, partial) with limited API (${{ matrix.os }})
-    needs: [initial_checks]
+    needs:
+      - initial_checks
+      - lowest-tree-check
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
         with:
