--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -47,8 +47,28 @@ jobs:
             core.info(`PR opened correctly against ${allowed_basebranch}`);
           }
 
-  tests:
+  lowest-tree-check:
+    name: Check environment lowest resolution against reference
     needs: [initial_checks]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3  # v6.0.0
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+      - uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c  # v6.0.0
+        name: Install Python
+        with:
+          python-version: "3.14"
+      - run: pipx run scripts/check-lowest-resolved-tree.py
+
+      - if: failure()
+        run: pipx run scripts/check-lowest-resolved-tree.py --markdown --quiet >> "$GITHUB_STEP_SUMMARY" || true
+
+  tests:
+    needs:
+      - initial_checks
+      - lowest-tree-check
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@d9b81a07e789d1b1921ab5fe33de2ddcbbd02c3f  # v2.3.0
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
@@ -116,7 +136,9 @@ jobs:
           cache-key: doubletest-${{ github.ref_name }}
 
   allowed_failures:
-    needs: [initial_checks]
+    needs:
+      - initial_checks
+      - lowest-tree-check
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@d9b81a07e789d1b1921ab5fe33de2ddcbbd02c3f  # v2.3.0
     with:
       setenv: |
@@ -135,7 +157,9 @@ jobs:
           posargs: --remote-data=any --verbose
 
   stub_tests:
-    needs: [initial_checks]
+    needs:
+      - initial_checks
+      - lowest-tree-check
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@d9b81a07e789d1b1921ab5fe33de2ddcbbd02c3f  # v2.3.0
     with:
       setenv: |
@@ -149,7 +173,9 @@ jobs:
           cache-key: stub_tests-${{ github.ref_name }}
 
   test_wheel_building:
-    needs: [initial_checks]
+    needs:
+      - initial_checks
+      - lowest-tree-check
     # This ensures that a couple of wheel targets work fine in pull requests and pushes
     permissions:
       contents: none
@@ -176,7 +202,9 @@ jobs:
             - windows-latest
     runs-on: ${{ matrix.os }}
     name: Python 3.11 (build only, partial) with limited API (${{ matrix.os }})
-    needs: [initial_checks]
+    needs:
+      - initial_checks
+      - lowest-tree-check
     steps:
       - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3  # v6.0.0
         with:
