Added `astropy.units.quantity_ufunc_overload` decorator which converts instances of `Quantity` to instances of `ndarray` for use with user-defined numpy ufuncs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ test = [
     "pytest-astropy>=0.11.0",
     "pytest-xdist>=3.6.0",
     "threadpoolctl>=3.0.0",
+    "numba",
 ]
 test_all = [
     # Install grouped optional dependencies
