--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ test = [
     "pytest-astropy>=0.11.0",
     "pytest-xdist>=3.6.0",
     "threadpoolctl>=3.0.0",
-    "numba",
+    "numba>=0.60.0",
 ]
 test_all = [
     # Install grouped optional dependencies
