MNT: fix a typo in a comment (`tox.ini`)

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ setenv =
     # on oldestdeps, we let warnings be warnings (-Wdefault) instead of treated-as-errors,
     # so we don't need to deal with filtering anything triggered from dependencies
     # Other options replicate the static configuration from pyproject.toml, since they
-    # would otherwise be shaddowed by the env variable.
+    # would otherwise be shadowed by the env variable.
     oldestdeps: PYTEST_ADDOPTS = -Wdefault -ra --doctest-rst --strict-config --strict-markers
 
 # Run the tests in a temporary directory to make sure that we don't import
