Add basic Mypy configuration
Configuring a default list of files for Mypy to check helps ensure that
modules without typing errors stay without typing errors. Configuring
`follow_imports = "silent"` ensures that Mypy does not report errors
from modules it is not instructed to check. In the long term type
checking with Mypy can allow compiling (parts of) `astropy` with Mypyc.

--- a/tox.ini
+++ b/tox.ini
@@ -179,7 +179,7 @@ commands =
     # We do not want to distribute py.typed files, but we need one or else Mypy
     # refuses to look at the generated stubs.
     touch {env_site_packages_dir}/astropy/units/py.typed
-    stubtest --mypy-config-file .stubtest.ini \
+    stubtest --mypy-config-file pyproject.toml \
         astropy.units.astrophys \
         astropy.units.cds \
         astropy.units.cgs \
