Set up a CI job for Mypy
The new CI job helps ensure that typing errors are not introduced to
modules Mypy already approves. Mypy approval is a requirement for
compiling anything with Mypyc.

--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -148,6 +148,20 @@ jobs:
           cache-path: .tox
           cache-key: stub_tests-${{ github.ref_name }}
 
+  mypy:
+    needs: [initial_checks]
+    uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@d9b81a07e789d1b1921ab5fe33de2ddcbbd02c3f  # v2.3.0
+    with:
+      setenv: |
+        ARCH_ON_CI: "normal"
+        IS_CRON: "false"
+      submodules: false
+      envs: |
+        - name: Type checking select modules
+          linux: mypy
+          cache-path: .tox
+          cache-key: mypy-${{ github.ref_name }}
+
   test_wheel_building:
     needs: [initial_checks]
     # This ensures that a couple of wheel targets work fine in pull requests and pushes
