--- a/tox.ini
+++ b/tox.ini
@@ -190,6 +190,18 @@ commands =
         astropy.units.si \
         astropy.units.function.units
 
+[testenv:mypy]
+description = check type annotations in files declared to be type-checkable
+allowlist_externals =
+    touch
+deps =
+    mypy
+commands =
+    # We do not want to distribute py.typed files, but we need one or else Mypy
+    # refuses to type check anything (in tox).
+    touch {env_site_packages_dir}/astropy/py.typed
+    mypy
+
 [testenv:pyinstaller]
 # Check that astropy can be included in a PyInstaller bundle without any issues. This
 # also serves as a test that tests do not import anything from outside the tests
