TST: Pin pyparsing for mpl380 job

--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,9 @@ description =
 deps =
     numpy125: numpy==1.25.*
 
+    # matplotlib 3.8 + pyparsing 3.3 = DeprecationWarning
     mpl380: matplotlib==3.8.0
+    mpl380: pyparsing==3.2.5
 
     image: latex
     image, devinfra: scipy
