--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dependencies = [
 recommended = [
     "scipy>=1.9.2",
     "matplotlib>=3.8.0",
+    "pyparsing>=2.4.0",
     "narwhals>=1.42.0",  # keep in sync with dependency-groups.dataframe
 ]
 # Optional IPython-related behavior is in many places in Astropy. IPython is a complex
