--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,9 @@ deps =
     numpy124: numpy==1.24.*
     numpy125: numpy==1.25.*
 
+    # matplotlib 3.8 + pyparsing 3.3 = DeprecationWarning
     mpl380: matplotlib==3.8.0
+    mpl380: pyparsing==3.2.5
 
     image: latex
     image, devinfra: scipy
