--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{311,312,313,313t,dev}-test{,-recdeps,-alldeps,-oldestdeps,-devdeps,-devinfra,-predeps,-numpy125,-mpl380}{,-cov}{,-clocale}{,-fitsio}{,-noscipy}
+    py{311,312,313,313t,dev}-test{,-recdeps,-alldeps,-oldestdeps,-devdeps,-devpytest,-predeps,-numpy125,-mpl380}{,-cov}{,-clocale}{,-fitsio}{,-noscipy}
     # Only these two exact tox environments have corresponding figure hash files.
     py311-test-image-mpl380-cov
     py311-test-image-mpldev-cov
@@ -56,7 +56,7 @@ description =
     recdeps: with recommended optional dependencies
     alldeps: with all optional and test dependencies
     devdeps: with the latest developer version of key dependencies
-    devinfra: like devdeps but also dev version of infrastructure
+    devpytest: with dev version of pytest infrastructure
     oldestdeps: with the oldest supported version of direct dependencies
     cov: and test coverage
     numpy125: with numpy 1.25.*
@@ -74,7 +74,7 @@ deps =
     mpl380: pyparsing==3.2.5
 
     image: latex
-    image, devinfra: scipy
+    image, devpytest: scipy
     image: pytest-mpl>=0.18
 
     # Some FITS tests use fitsio as a comparison
@@ -93,15 +93,15 @@ deps =
     mpldev: matplotlib>=0.0.dev0
 
     # Latest developer version of infrastructure packages.
-    devinfra: git+https://github.com/pytest-dev/pytest.git
-    devinfra: git+https://github.com/astropy/extension-helpers.git
-    devinfra: git+https://github.com/scientific-python/pytest-doctestplus.git
-    devinfra: git+https://github.com/astropy/pytest-remotedata.git
-    devinfra: git+https://github.com/astropy/pytest-astropy-header.git
-    devinfra: git+https://github.com/astropy/pytest-arraydiff.git
-    devinfra: git+https://github.com/astropy/pytest-filter-subpackage.git
-    devinfra: git+https://github.com/matplotlib/pytest-mpl.git
-    devinfra: git+https://github.com/astropy/pytest-astropy.git
+    devpytest: git+https://github.com/pytest-dev/pytest.git
+    devpytest: git+https://github.com/astropy/extension-helpers.git
+    devpytest: git+https://github.com/scientific-python/pytest-doctestplus.git
+    devpytest: git+https://github.com/astropy/pytest-remotedata.git
+    devpytest: git+https://github.com/astropy/pytest-astropy-header.git
+    devpytest: git+https://github.com/astropy/pytest-arraydiff.git
+    devpytest: git+https://github.com/astropy/pytest-filter-subpackage.git
+    devpytest: git+https://github.com/matplotlib/pytest-mpl.git
+    devpytest: git+https://github.com/astropy/pytest-astropy.git
 
     # Duplicates test_all in pyproject.toml due to upstream bug
     # https://github.com/tox-dev/tox/issues/3433
