TST: Add Sphinx RC workflow

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 envlist =
-    py{311,312,313,313t,dev}-test{,-recdeps,-alldeps,-oldestdeps,-devdeps,-devpytest,-predeps,-numpy125,-mpl380}{,-cov}{,-clocale}{,-fitsio}{,-noscipy}
+    py{311,312,313,313t,dev}-test{,-recdeps,-docdeps,-alldeps,-oldestdeps,-devdeps,-devpytest,-predeps,-numpy125,-mpl380}{,-cov}{,-clocale}{,-fitsio}{,-noscipy}
     # Only these two exact tox environments have corresponding figure hash files.
     py311-test-image-mpl380-cov
     py311-test-image-mpldev-cov
-    build_docs
+    build_docs{,-predeps}
     linkcheck
     codestyle
     stubtest
@@ -117,7 +117,8 @@ deps =
 extras =
     test: test
     recdeps: recommended
-    alldeps: all
+    alldeps, docdeps: all
+    docdeps: docs
 
 dependency-groups =
     alldeps: dataframe
@@ -150,6 +151,8 @@ extras =
   all
 dependency-groups =
   dataframe
+pip_pre =
+    predeps: true
 commands =
     {list_dependencies_command}
     sphinx-build -b html . _build/html {posargs:-j auto}
