--- a/tox.ini
+++ b/tox.ini
@@ -143,7 +143,7 @@ uv_resolution =
 
 # This lets developers use tox to build docs and ignores warnings.
 # This is not used in CI; For that, we have RTD PR builder.
-[testenv:build_docs]
+[testenv:build_docs{,-predeps}]
 changedir = docs
 description = invoke sphinx-build to build the HTML docs
 extras =
