Override sphinx-design pin on sphinx and add description for docdeps

--- a/tox.ini
+++ b/tox.ini
@@ -54,6 +54,7 @@ changedir = .tmp/{envname}
 description =
     run tests
     recdeps: with recommended optional dependencies
+    docdeps: with documentation dependencies
     alldeps: with all optional and test dependencies
     devdeps: with the latest developer version of key dependencies
     devpytest: with dev version of pytest infrastructure
@@ -124,6 +125,8 @@ dependency-groups =
     alldeps: dataframe
 
 commands =
+    # docdeps-predeps: Override sphinx max pin in sphinx-design
+    docdeps-predeps: pip install sphinx -U --pre
     {list_dependencies_command}
     !cov-!double: pytest --strict-markers --pyargs astropy {toxinidir}/docs {env:MPLFLAGS} {posargs}
     cov-!double: pytest --strict-markers --pyargs astropy {toxinidir}/docs {env:MPLFLAGS} --cov astropy --cov-config={toxinidir}/pyproject.toml --cov-report xml:{toxinidir}/coverage.xml {posargs}
@@ -152,6 +155,8 @@ extras =
 dependency-groups =
   dataframe
 commands =
+    # predeps: Override sphinx max pin in sphinx-design
+    predeps: pip install sphinx -U --pre
     {list_dependencies_command}
     sphinx-build -b html . _build/html {posargs:-j auto}
 pip_pre =
