--- a/tox.ini
+++ b/tox.ini
@@ -126,7 +126,7 @@ dependency-groups =
 
 commands =
     # docdeps-predeps: Override sphinx max pin in sphinx-design
-    docdeps-predeps: pip install sphinx -U --pre
+    docdeps-predeps: pip install sphinx -U --pre --no-deps
     {list_dependencies_command}
     !cov-!double: pytest --strict-markers --pyargs astropy {toxinidir}/docs {env:MPLFLAGS} {posargs}
     cov-!double: pytest --strict-markers --pyargs astropy {toxinidir}/docs {env:MPLFLAGS} --cov astropy --cov-config={toxinidir}/pyproject.toml --cov-report xml:{toxinidir}/coverage.xml {posargs}
@@ -156,7 +156,7 @@ dependency-groups =
   dataframe
 commands =
     # predeps: Override sphinx max pin in sphinx-design
-    predeps: pip install sphinx -U --pre
+    predeps: pip install sphinx -U --pre --no-deps
     {list_dependencies_command}
     sphinx-build -b html . _build/html {posargs:-j auto}
 pip_pre =
