--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ setenv =
     clocale: LC_ALL = C
     devdeps: UV_INDEX = https://pypi.anaconda.org/liberfa/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
     mpldev: UV_INDEX = https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
-    devdeps, mpldev: UV_INDEX_STRATEGY = unsafe-best-match # match pip's behavior
+    devdeps, mpldev, predeps: UV_INDEX_STRATEGY = unsafe-best-match # match pip's behavior
     fitsio: ASTROPY_ALWAYS_TEST_FITSIO = true
     # on oldestdeps, we let warnings be warnings (-Wdefault) instead of treated-as-errors,
     # so we don't need to deal with filtering anything triggered from dependencies
