MAINT: adding more predeps scaffolding

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ setenv =
     clocale: LC_ALL = C
     devdeps: UV_INDEX = https://pypi.anaconda.org/liberfa/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
     mpldev: UV_INDEX = https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
-    devdeps, mpldev, predeps: UV_INDEX_STRATEGY = unsafe-best-match # match pip's behavior
+    devdeps, mpldev, predeps, devpytest: UV_INDEX_STRATEGY = unsafe-best-match # match pip's behavior
     fitsio: ASTROPY_ALWAYS_TEST_FITSIO = true
     # on oldestdeps, we let warnings be warnings (-Wdefault) instead of treated-as-errors,
     # so we don't need to deal with filtering anything triggered from dependencies
@@ -126,7 +126,7 @@ dependency-groups =
 
 commands =
     # docdeps-predeps: Override sphinx max pin in sphinx-design
-    docdeps-predeps: pip install sphinx -U --pre --no-deps
+    docdeps-predeps: uv pip install sphinx -U --pre --no-deps
     {list_dependencies_command}
     !cov-!double: pytest --strict-markers --pyargs astropy {toxinidir}/docs {env:MPLFLAGS} {posargs}
     cov-!double: pytest --strict-markers --pyargs astropy {toxinidir}/docs {env:MPLFLAGS} --cov astropy --cov-config={toxinidir}/pyproject.toml --cov-report xml:{toxinidir}/coverage.xml {posargs}
@@ -154,9 +154,13 @@ extras =
   all
 dependency-groups =
   dataframe
+
+setenv =
+    predeps: UV_INDEX_STRATEGY = unsafe-best-match # match pip's behavior
+
 commands =
     # predeps: Override sphinx max pin in sphinx-design
-    predeps: pip install sphinx -U --pre --no-deps
+    predeps: uv pip install sphinx -U --pre --no-deps
     {list_dependencies_command}
     sphinx-build -b html . _build/html {posargs:-j auto}
 pip_pre =
