CI: one more not bus factor dependency

--- a/tox.ini
+++ b/tox.ini
@@ -158,6 +158,9 @@ dependency-groups =
 setenv =
     predeps: UV_INDEX_STRATEGY = unsafe-best-match # match pip's behavior
 
+deps =
+    # Not yet released but with a fix for sphinx9; remove when newer than 0.1.2 can be installed
+    predeps: git+https://github.com/missinglinkelectronics/sphinxcontrib-globalsubs.git@f4a340d5b7506aca9dcc914e9bd96d60d0d36865
 commands =
     # predeps: Override sphinx max pin in sphinx-design
     predeps: uv pip install sphinx -U --pre --no-deps
