--- a/tox.ini
+++ b/tox.ini
@@ -158,10 +158,11 @@ dependency-groups =
 setenv =
     predeps: UV_INDEX_STRATEGY = unsafe-best-match # match pip's behavior
 
-deps =
-    # Not yet released but with a fix for sphinx9; remove when newer than 0.1.2 can be installed
-    predeps: git+https://github.com/missinglinkelectronics/sphinxcontrib-globalsubs.git@f4a340d5b7506aca9dcc914e9bd96d60d0d36865
 commands =
+    # Need to install it here otherwise UV throws a hissy fit about it requiring sphinx>=9 and refuses to install the version from github
+    # Remove github url when newer than 0.1.2 is released
+    predeps: uv pip install git+https://github.com/missinglinkelectronics/sphinxcontrib-globalsubs@f4a340d5b7506aca9dcc914e9bd96d60d0d36865
+
     # predeps: Override sphinx max pin in sphinx-design
     predeps: uv pip install sphinx -U --pre --no-deps
     {list_dependencies_command}
