TST: build_docs to use -W if predeps

--- a/tox.ini
+++ b/tox.ini
@@ -166,7 +166,9 @@ commands =
     # predeps: Override sphinx max pin in sphinx-design
     predeps: uv pip install sphinx -U --pre --no-deps
     {list_dependencies_command}
-    sphinx-build -b html . _build/html {posargs:-j auto}
+    sphinx-build \
+    predeps: -W \
+    -b html . _build/html {posargs:-j auto}
 pip_pre =
     predeps: true
 
