--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ setenv =
     # so we don't need to deal with filtering anything triggered from dependencies
     # Other options replicate the static configuration from pyproject.toml, since they
     # would otherwise be shadowed by the env variable.
-    oldestdeps: PYTEST_ADDOPTS = -Wdefault -ra --doctest-rst --strict-config --strict-markers
+    oldestdeps: PYTEST_ADDOPTS = -Wdefault --doctest-rst --strict-config --strict-markers
 
 # Run the tests in a temporary directory to make sure that we don't import
 # astropy from the source tree
