--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
-    py{311,312,313,313t,314,dev}-test{,-recdeps,-docdeps,-alldeps,-oldestdeps,-devdeps,-devpytest,-predeps,-mpl380}{,-cov}{,-clocale}{,-fitsio}{,-noscipy}
+    py{311,312,313,313t,314,dev}-test{,-recdeps,-docdeps,-alldeps,-oldestdeps,-devdeps,-devpytest,-predeps}{,-cov}{,-clocale}{,-fitsio}{,-noscipy}
     # Only these two exact tox environments have corresponding figure hash files.
-    py311-test-image-mpl380-cov
+    py311-test-image-oldestdeps-cov
     py311-test-image-mpldev-cov
     build_docs{,-predeps}
     linkcheck
@@ -61,18 +61,13 @@ description =
     oldestdeps: with the oldest supported version of direct dependencies
     cov: and test coverage
     image: with image tests
-    mpl380: with matplotlib 3.8.4
     mpldev: with the latest developer version of matplotlib
     double: twice in a row to check for global state changes
     noscipy: without scipy-dev
 
 deps =
-    # matplotlib 3.8 + pyparsing 3.3 = DeprecationWarning
-    mpl380: matplotlib==3.8.4
-    mpl380: pyparsing==3.2.5
-
+    devpytest: scipy
     image: latex
-    image, devpytest: scipy
     image: pytest-mpl>=0.18
 
     # Some FITS tests use fitsio as a comparison
@@ -114,7 +109,7 @@ deps =
 # test_all does not work here due to upstream bug https://github.com/tox-dev/tox/issues/3433
 extras =
     test: test
-    recdeps: recommended
+    image, recdeps: recommended
     alldeps, docdeps: all
     docdeps: docs
 
