--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{311,312,313,313t,dev}-test{,-recdeps,-docdeps,-alldeps,-oldestdeps,-devdeps,-devpytest,-predeps,-numpy20,-mpl380}{,-cov}{,-clocale}{,-fitsio}{,-noscipy}
+    py{311,312,313,313t,dev}-test{,-recdeps,-docdeps,-alldeps,-oldestdeps,-devdeps,-devpytest,-predeps,-mpl380}{,-cov}{,-clocale}{,-fitsio}{,-noscipy}
     # Only these two exact tox environments have corresponding figure hash files.
     py311-test-image-mpl380-cov
     py311-test-image-mpldev-cov
@@ -60,7 +60,6 @@ description =
     devpytest: with dev version of pytest infrastructure
     oldestdeps: with the oldest supported version of direct dependencies
     cov: and test coverage
-    numpy20: with numpy 2.0.*
     image: with image tests
     mpl380: with matplotlib 3.8.4
     mpldev: with the latest developer version of matplotlib
@@ -68,8 +67,6 @@ description =
     noscipy: without scipy-dev
 
 deps =
-    numpy20: numpy==2.0.*
-
     # matplotlib 3.8 + pyparsing 3.3 = DeprecationWarning
     mpl380: matplotlib==3.8.4
     mpl380: pyparsing==3.2.5
