Add multidim_threshold configuration for vector column display
Implement a new configuration option 'multidim_threshold' that allows users
to control how many elements are displayed in multidimensional table columns.

Changes:
- Add conf.multidim_threshold configuration parameter in astropy.__init__
  with alias 'astropy.table.pprint.multidim_threshold'
- Update table pprint logic to respect the threshold setting:
  * None (default): shows only first and last elements (preserves existing behavior)
  * -1: shows all elements
  * Positive integer: shows that many elements split between start and end
- Add comprehensive tests for the new functionality
- Add uv.lock to .gitignore

This addresses the need to display complete 3-vectors (position, velocity)
and other small multidimensional columns where showing all elements is more
informative than just first and last.

Fixes #19116

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ venv
 # install astropy with pipenv will have these files generated
 Pipfile
 Pipfile.lock
+uv.lock
 
 # pyinstaller files
 .pyinstaller/astropy_tests/
