EXP: try patched jplephem (address numpy-dev deprecations)

--- a/tox.ini
+++ b/tox.ini
@@ -87,6 +87,7 @@ deps =
     devdeps: numpy>=0.0.dev0
     devdeps-!noscipy: matplotlib>=0.0.dev0
     devdeps: pyerfa>=0.0.dev0
+    devdeps: git+https://github.com/neutrinoceros/python-jplephem.git@e27ceb7ce6157d35fb4849f4e5907e682c420cd4
 
     mpldev: matplotlib>=0.0.dev0
 
