--- a/pyproject.toml
+++ b/pyproject.toml
@@ -844,3 +844,6 @@ constraint-dependencies = [
     "toolz>=0.12.0", # can be removed once dask<=2025.11.0 is dropped
     "cloudpickle>=2.1.0", # can be removed once dask<2024.8.1 is dropped
 ]
+
+[tool.uv.sources]
+jplephem = { git = "https://github.com/neutrinoceros/python-jplephem.git", branch = "reshape" }
