--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,8 +7,16 @@ build:
   jobs:
     post_checkout:
       - git fetch --unshallow || true
+    pre_create_environment:
+      - asdf plugin add uv
+      - asdf install uv latest
+      - asdf global uv latest
+    create_environment:
+      - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
     pre_install:
       - git update-index --assume-unchanged docs/conf.py docs/rtd_environment.yaml
+    install:
+      - UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv sync --frozen --extra docs
 
 conda:
   environment: docs/rtd_environment.yaml
