--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,7 @@ docs = [
     "Jinja2>=3.1.3",
     "sphinxcontrib-globalsubs >= 0.1.1",
     "matplotlib>=3.9.1",  # https://github.com/matplotlib/matplotlib/issues/28234
+    "graphviz>=0.21",
 ]
 # These group together all the dependencies needed for developing in Astropy.
 dev = [
