--- a/pyproject.toml
+++ b/pyproject.toml
@@ -247,6 +247,7 @@ filterwarnings = [
     "error",
     # https://github.com/astropy/astropy/issues/18126
     "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning", # not PYTHON_LT_3_14
+    "ignore:The chararray class is deprecated and will be removed in a future release.:DeprecationWarning", # not NUMPY_LT_2_5
 ]
 doctest_norecursedirs = [
     "*/setup_package.py",
