TST: Temporarily ignore DeprecationWarning from numpy chararray until we can fix it up in io.fits

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -251,6 +251,8 @@ filterwarnings = [
     "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning", # not PYTHON_LT_3_14
     # Weird warning from the vectorized do_format in Angle.to_string. low numpy/python?
     "ignore:invalid value encountered in do_format:RuntimeWarning",
+    # https://github.com/astropy/astropy/issues/3862 and 19216
+    "ignore:The chararray class is deprecated:DeprecationWarning",
 ]
 doctest_norecursedirs = [
     "*/setup_package.py",
