--- a/pyproject.toml
+++ b/pyproject.toml
@@ -845,4 +845,7 @@ constraint-dependencies = [
     # via dask
     "toolz>=0.12.0", # can be removed once dask<=2025.11.0 is dropped
     "cloudpickle>=2.1.0", # can be removed once dask<2024.8.1 is dropped
+
+    # see https://github.com/astropy/astropy/issues/18292
+    "array-api-strict<2.4 ; python_version<'3.12'",
 ]
