TST: leverage tox 4.33 support for PEP 508 environment markers

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ envlist =
     codestyle
     stubtest
 requires =
+    tox >=4.33 # for PEP 508 environment markers # keep in sync with pyproject.toml
     tox-uv
-minversion = 4.22 # for dependency_groups # keep in sync with pyproject.toml
 
 [testenv]
 # Pass through the following environment variables which are needed for the CI
@@ -18,12 +18,9 @@ passenv = HOME,WINDIR,LC_ALL,LC_CTYPE,CC,CI,IS_CRON,ARCH_ON_CI,PY_COLORS
 
 setenv =
     NUMPY_WARN_IF_NO_MEM_POLICY = 1
+    COVERAGE_CORE = sysmon; python_version >= '3.12'
     # For coverage, we need to pass extra options to the C compiler
     cov: CFLAGS = --coverage -fno-inline-functions -O0
-    # opt-in faster coverage when available (requires Python >= 3.12)
-    py312: COVERAGE_CORE=sysmon
-    py313: COVERAGE_CORE=sysmon
-    py313t: COVERAGE_CORE=sysmon
     py313t: PYTHON_GIL=0
     image: MPLFLAGS = -m "mpl_image_compare" --mpl --mpl-generate-summary=html --mpl-results-path={toxinidir}/results --mpl-hash-library={toxinidir}/astropy/tests/figures/{envname}.json --mpl-baseline-path=https://raw.githubusercontent.com/astropy/astropy-figure-tests/astropy-main/figures/{envname}/ --remote-data
     !image: MPLFLAGS =
