switching from passing fsspec.filesystem kwargs to passing fsspec.filesystem directly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,7 @@ test_all = [
     "astropy[all]",  # installs all optional run-time dependencies
     "astropy[test]",
     # Install all remaining dependencies
+    "fsspec>=2026",
     "objgraph>=3.1.2",
     "skyfield>=1.42.0",
     "sgp4>=2.3",
