--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,7 +114,7 @@ test_all = [
     "astropy[all]",  # installs all optional run-time dependencies
     "astropy[test]",
     # Install all remaining dependencies
-    "fsspec>=2026",
+    "fsspec[http]>=2023.4.0",
     "objgraph>=3.1.2",
     "skyfield>=1.42.0",
     "sgp4>=2.3",
@@ -144,6 +144,7 @@ docs = [
     "Jinja2>=3.1.3",
     "sphinxcontrib-globalsubs >= 0.1.1",
     "matplotlib>=3.9.1",  # https://github.com/matplotlib/matplotlib/issues/28234
+    "fsspec[http]>=2023.4.0",
 ]
 # These group together all the dependencies needed for developing in Astropy.
 dev = [
