TST: require tox>=4.37 and clean up moot workaround

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist =
     codestyle
     stubtest
 requires =
-    tox >=4.33 # for PEP 508 environment markers # keep in sync with pyproject.toml
+    tox >=4.37 # keep in sync with pyproject.toml
     tox-uv
 
 [testenv]
@@ -98,21 +98,12 @@ deps =
     devpytest: git+https://github.com/matplotlib/pytest-mpl.git
     devpytest: git+https://github.com/astropy/pytest-astropy.git
 
-    # Duplicates test_all in pyproject.toml due to upstream bug
-    # https://github.com/tox-dev/tox/issues/3433
-    # But we cannot use alldeps because it messed up oldest-deps pins.
-    devdeps-!noscipy: objgraph>=1.6.0
-    devdeps-!noscipy: skyfield>=1.20
-    devdeps-!noscipy: sgp4>=2.3
-    devdeps-!noscipy: array-api-strict>=1.0
-    devdeps-!noscipy: numpy-quaddtype>=0.2.2
-
 # The following indicates which [project.optional-dependencies] from pyproject.toml will be installed.
-# test_all does not work here due to upstream bug https://github.com/tox-dev/tox/issues/3433
 extras =
     test: test
     recdeps: recommended
     alldeps, docdeps: all
+    devdeps-!noscipy: test_all
     docdeps: docs
 
 dependency-groups =
