--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,6 +143,7 @@ docs = [
     "Jinja2>=3.1.3",
     "sphinxcontrib-globalsubs >= 0.1.1",
     "matplotlib>=3.9.1",  # https://github.com/matplotlib/matplotlib/issues/28234
+    "dask",
 ]
 # These group together all the dependencies needed for developing in Astropy.
 dev = [
